package homework.task2;

public interface Sorter {

    public void load(int[] elements);

    public void sort();

    public String getPlan();
    
}
